plugins {
    id 'base'
}

version = '0.3.0'

subprojects {
    apply plugin: 'java-library'

    group = 'eu.scattering'
    version = rootProject.version

    sourceCompatibility = '21'
    targetCompatibility = '21'

    java {
        modularity.inferModulePath = true
    }

    repositories {
        mavenCentral()
    }
}